--- a/src/BitMaster.Generator/BitMaster.Generator.csproj
+++ b/src/BitMaster.Generator/BitMaster.Generator.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<LangVersion>default</LangVersion>
 		<IncludeSymbols>true</IncludeSymbols>
+		<Version>1.0.1</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
