--- a/src/BitMaster/BitMaster.csproj
+++ b/src/BitMaster/BitMaster.csproj
@@ -8,6 +8,7 @@
 	  <Title>BitSerializer</Title>
 	  <RepositoryUrl>https://github.com/project-nevareth/BitMaster.git</RepositoryUrl>
 	  <Authors>NCKEX</Authors>
+	  <Version>2.0.0</Version>
   </PropertyGroup>
 
 </Project>
